--- a/.gitmodules
+++ b/.gitmodules
@@ -4,3 +4,6 @@
 [submodule "openzeppelin-contracts"]
 	path = openzeppelin-contracts
 	url = https://github.com/OpenZeppelin/openzeppelin-contracts
+[submodule "forge-std"]
+	path = forge-std
+	url = https://github.com/foundry-rs/forge-std
