--- a/.gitmodules
+++ b/.gitmodules
@@ -7,3 +7,6 @@
 [submodule "forge-std"]
 	path = forge-std
 	url = https://github.com/foundry-rs/forge-std
+[submodule "solmate"]
+	path = solmate
+	url = https://github.com/transmissions11/solmate
