fix: add https://github.com/arachnid/solidity-stringutils

--- a/.gitmodules
+++ b/.gitmodules
@@ -10,3 +10,6 @@
 [submodule "solmate"]
 	path = solmate
 	url = https://github.com/transmissions11/solmate
+[submodule "solidity-stringutils"]
+	path = solidity-stringutils
+	url = https://github.com/arachnid/solidity-stringutils
