fix: add @openzeppelin/contracts-upgradeable for package.json

--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@nomicfoundation/hardhat-network-helpers": "^1.0.12",
     "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.13",
+    "@openzeppelin/contracts-upgradeable": "^5.3.0",
     "@typechain/ethers-v6": "^0.5.1",
     "@typechain/hardhat": "^9.1.0",
     "@types/chai": "^4.2.0",
