--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   "scripts": {
     "test": "hardhat test",
     "compile": "hardhat compile",
-    "deploy": "hardhat run scripts/deploy.ts",
-    "deploy:localhost": "hardhat run scripts/deploy.ts --network localhost",
-    "deploy:sepolia": "hardhat run scripts/deploy.ts --network sepolia",
-    "verify:sepolia": "hardhat verify --network sepolia DEPLOYED_CONTRACT_ADDRESS",
+    "deploy": "hardhat ignition deploy ./ignition/modules/YKAToken.ts",
+    "deploy:localhost": "hardhat ignition deploy ./ignition/modules/YKAToken.ts --network localhost",
+    "deploy:sepolia": "hardhat ignition deploy ./ignition/modules/YKAToken.ts --network sepolia",
+    "verify:sepolia": "hardhat verify --network sepolia DEPLOYED_PROXY_ADDRESS",
     "lint": "solhint 'contracts/**/*.sol'",
     "coverage": "hardhat coverage"
   },
@@ -25,6 +25,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-chai-matchers": "^2.0.8",
     "@nomicfoundation/hardhat-ethers": "^3.0.8",
+    "@nomicfoundation/hardhat-ignition": "^0.15.11",
+    "@nomicfoundation/hardhat-ignition-ethers": "^0.15.11",
     "@nomicfoundation/hardhat-network-helpers": "^1.0.12",
     "@nomicfoundation/hardhat-toolbox-viem": "^3.0.0",
     "@nomicfoundation/hardhat-verify": "^2.0.13",
