fix: add POLYGON_RPC_URL for .github/workflows/hardhat.yml

--- a/.github/workflows/hardhat.yml
+++ b/.github/workflows/hardhat.yml
@@ -34,6 +34,24 @@ jobs:
 
       - name: Run tests
         run: npm run test
+        env:
+          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+          MUMBAI_RPC_URL: ${{ secrets.MUMBAI_RPC_URL }}
+          POLYGON_RPC_URL: ${{ secrets.POLYGON_RPC_URL }}
+          POLYGONSCAN_API_KEY: ${{ secrets.POLYGONSCAN_API_KEY }}
+          REPORT_GAS: ${{ secrets.REPORT_GAS }}
+          COINMARKETCAP_API_KEY: ${{ secrets.COINMARKETCAP_API_KEY }}
+          INITIAL_SUPPLY: ${{ secrets.INITIAL_SUPPLY }}
+          MAX_SUPPLY: ${{ secrets.MAX_SUPPLY }}
+          AIRDROP_AMOUNT: ${{ secrets.AIRDROP_AMOUNT }}
 
-      - name: Run deploy
-        run: npm run deploy
+      - name: Deploy to Mumbai
+        run: npm run deploy:mumbai
+        env:
+          PRIVATE_KEY: ${{ secrets.PRIVATE_KEY }}
+          MUMBAI_RPC_URL: ${{ secrets.MUMBAI_RPC_URL }}
+          POLYGON_RPC_URL: ${{ secrets.POLYGON_RPC_URL }}
+          POLYGONSCAN_API_KEY: ${{ secrets.POLYGONSCAN_API_KEY }}
+          INITIAL_SUPPLY: ${{ secrets.INITIAL_SUPPLY }}
+          MAX_SUPPLY: ${{ secrets.MAX_SUPPLY }}
+          AIRDROP_AMOUNT: ${{ secrets.AIRDROP_AMOUNT }}
