fix: add memory-bank for .gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -16,3 +16,6 @@ node_modules
 # Hardhat Ignition default folder for deployments against a local node
 ignition/deployments/*
 ignition/cache/*
+
+# memory-bank
+memory-bank
