fix: update amoy from mumbai

--- a/.env.example
+++ b/.env.example
@@ -2,7 +2,7 @@
 PRIVATE_KEY=あなたのウォレットの秘密鍵（0xプレフィックスなし）
 
 # ネットワーク情報
-MUMBAI_RPC_URL=https://rpc-mumbai.maticvigil.com
+AMOY_RPC_URL=https://rpc-amoy.polygon.technology
 POLYGON_RPC_URL=https://polygon-rpc.com
 
 # API キー
