--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "YKA Token protocol core implementation",
   "main": "index.js",
   "scripts": {
-    "test": "hardhat test",
+    "test": "hardhat test test/**/*.test.ts",
     "compile": "hardhat compile",
     "deploy": "hardhat ignition deploy ./ignition/modules/YKAToken.ts --network amoy",
     "deploy:localhost": "hardhat ignition deploy ./ignition/modules/YKAToken.ts --network localhost",
